--- a/app/templates/corsi.html
+++ b/app/templates/corsi.html
@@ -76,6 +76,8 @@
                                         <button type="submit" class="waves-effect waves-light btn deep-orange darken-3" onclick="">
                                             Conferma
                                         </button>
+                                        <input type="button" class="waves-effect waves-light btn deep-orange darken-3" style="cursor: pointer; color: white;" onclick="resetForm()" value="Reset form">
+
                                     </form>
                                 </div>
                             </div>
@@ -120,4 +122,10 @@
 {%- block base_javascript -%}
 <script src="{{ url_for('static',filename='javascript/corsi.js') }}"></script>
 <script src="{{ url_for('static',filename='javascript/corso_elem.js') }}"></script>
+
+<script>
+    function resetForm() {
+      document.getElementById("nuovo_corso_insert").reset();
+    }
+</script>
 {%- endblock -%}
