--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -34,7 +34,7 @@
                             <div class="col s11 offset-s1">                
                                 <div class="row">
                                     {%- set class_name = 'Lezioni' -%}
-                                    <form id="inserisci_nuova_lezione" class="col s12" action="/insert" method="POST">
+                                    <form id="nuova_lezione_insert" class="col s12" action="/insert" method="POST">
                                         
                                         {%- for element in attrLezioni.values() -%}
                                         {%- if element.insertable -%}
@@ -50,6 +50,7 @@
                                         <button type="submit" class="waves-effect waves-light btn deep-orange darken-3" onclick="">
                                             Conferma
                                         </button>
+                                        <input type="button" class="waves-effect waves-light btn deep-orange darken-3" style="cursor: pointer; color: white;" onclick="resetForm()" value="Reset form">
                                     </form>
                                 </div>
                             </div>
@@ -92,4 +93,11 @@
 
 {%- block base_javascript -%}
 <script src="{{ url_for('static',filename='javascript/corsi.js') }}"></script>
+<script>
+    function resetForm() {
+      document.getElementById("nuova_lezione_insert").reset();
+    }
+</script>
 {%- endblock -%}
+
+
