aggiunta funzionalità elimina corso

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,10 @@
 
 
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/base.css') }}">
+	
+	<!-- icone font awesome -->
+	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>                      
+     
 	{% block head_base %}{% endblock %}
 
 </head>
