aggiunto popup di conferma eliminazione corsi e lezioni

--- a/app/templates/corsi.html
+++ b/app/templates/corsi.html
@@ -127,5 +127,10 @@
     function resetForm() {
       document.getElementById("nuovo_corso_insert").reset();
     }
+
+    function confirmDelete(titolo){
+        return confirm("Vuoi davvero cancellare il corso di "+titolo+" ?");
+    }
+
 </script>
 {%- endblock -%}
