--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -50,9 +50,9 @@
                     {%- if is_docente -%}
                         {%- if corso in i_tuoi_corsi -%}
                             <div class="left" style="display: block;">
-                                <form action="/elimina_corso" method="POST">
+                                <form onsubmit="return confirmDelete('{{ corso.titolo  }}')" action="/elimina_corso" method="POST">
                                     <input name="idcorsoDel" type="number" style="display:none" value="{{ corso.id }}">
-                                    <button type="submit" style="background: transparent; border: none; font-size:0; cursor: pointer">
+                                    <button type="submit"  style="background: transparent; border: none; font-size:0; cursor: pointer">
                                         <i  class='fa fa-trash' style="color: black; padding-left: 5px; font-size: 30px;"></i>  
                                     </button>
                                 </form>   
