aggiunto il mio cognome ahahha

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -74,7 +74,7 @@
 					<ul>
 						<li>Luca Daminato</li>
 						<li>Nicola Marizza</li>
-						<li>Giulia </li>
+						<li>Giulia Cogotti</li>
 					</ul>
 				</div>
 				<div class="col l4 offset-l2 s12">
