--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -13,7 +13,7 @@
 
 
 <div class="row">
-    <div class="col s8 offset-s2">
+    <div class="col s9 offset-s2">
        
         <h2>Lezioni</h2>
         {%- if is_docente -%}
@@ -78,7 +78,7 @@
                             
                             <th> Corso</th>
                             <th>Sede</th>
-                            <th>Inizio</th>
+                            <th>Data e ora</th>
                             <th>Durata</th>
                             <th>Modalità</th>
                             <th></th>
