--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -1,4 +1,4 @@
-{% set active_page = 'corsi.index' %}
+{% set active_page = 'lezioni.index' %}
 {%- extends 'base.html' -%}
 
 {%- block head_base -%}
@@ -10,7 +10,6 @@
 
 
 {%- block body_base -%}
-
 
 <div class="row">
     <div class="col s9 offset-s2">
