--- a/app/templates/lezione_elem.html
+++ b/app/templates/lezione_elem.html
@@ -36,7 +36,7 @@
             {%- else -%}
                 <form action="/iscrizione_lezione" method="POST">
                     <input name="idlezione" type="number" style="display:none" value="{{ lezione[1].id }}">
-                    <button type="submit"  class="waves-effect waves-light btn deep-orange darken-3" style="font-size: 12px;">iscriviti</button>
+                    <button type="submit"  class="waves-effect waves-light btn deep-orange darken-3" style="font-size: 12px;">prenota</button>
                 </form>
             {%- endif -%}    
         {%- endif -%}    
