--- a/app/templates/corsi.html
+++ b/app/templates/corsi.html
@@ -74,10 +74,10 @@
 
 
                                         <button type="submit" class="waves-effect waves-light btn deep-orange darken-3" onclick="">
-                                            Conferma
+                                            Conferma <i class="material-icons right">check</i>
                                         </button>
-                                        <input type="button" class="waves-effect waves-light btn deep-orange darken-3" style="cursor: pointer; color: white;" onclick="resetForm()" value="Reset form">
-
+                                        <a class="waves-effect waves-light btn deep-orange darken-3" onclick="resetForm()">Reset Form</a>
+                                        
                                     </form>
                                 </div>
                             </div>
