--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -63,7 +63,7 @@
                                 <div class="right" style="display: block;">
 
                                     <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowFormModificaCorso(event)">
-                                        Modifica
+                                        Modifica <i class="material-icons right">create</i>
                                     </button>
                                     
                                        
@@ -75,7 +75,7 @@
                                         Annulla
                                     </button>
                                     <button type="submit" form="{{ corso.id }}" class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowFormModificaCorso(event)">
-                                        Salva modifiche
+                                        Salva modifiche <i class="material-icons right">create</i>
                                     </button>
                                 </div>
                                 
