--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -95,13 +95,14 @@
 										<label class="error red-text">Esiste già un utente con questa email</label>
 									</div>
 									{%- endif -%}
-							
+									
 									<div class="right">
 
-										<input type="button" class="waves-effect waves-light btn deep-orange darken-3 " style="cursor: pointer; color: white;" onclick="resetFormReg()" value="Reset form">
-
+										<a class="waves-effect waves-light btn deep-orange darken-3" onclick="resetFormReg()">Reset Form</a>
+										
 										<button class="waves-effect waves-light btn deep-orange darken-3 "
-											type="submit" name="registrati">Registrati</button>
+											type="submit" name="registrati">Registrati
+											<i class="material-icons right">send</i></button>
 
 					
 									</div>
