--- a/app/templates/form_element.html
+++ b/app/templates/form_element.html
@@ -4,7 +4,7 @@
 	</div>
 	<!--NON TOGLIERE class="browser-default" altrimenti succedono cose brutte
 	e le select smettono di fare il loro dovere! ho bestemmiato parecchio-->
-	<select id="{{ element.name }}" class="browser-default" name={{ class_name }}.{{ element.name }}>
+	<select id="{{ element.name }}" class="browser-default" name={{ class_name }}.{{ element.name }} autocomplete="off">
 		<option value="" disabled selected>{{ element.displayName }}</option>
 		{%- for pk, displayName in element.options.items() -%}
 			
