--- a/app/templates/corsi.html
+++ b/app/templates/corsi.html
@@ -32,23 +32,17 @@
         
         {%- if is_docente -%}
         <div>
-           <!-- 
-            credo non serva, dava errore perché è usato corso che non si
-            riferisce a nulla   
-            <button class="waves-effect waves-light btn deep-orange darken-3">
+            <button id="button_crea_corso" class="waves-effect waves-light btn deep-orange darken-3" onclick="button_crea_corso_click()" style="display: block;">
                 Crea nuovo corso
             </button>
             
-            <button class="waves-effect waves-light btn deep-orange darken-3" onclick="">
+            <button id="button_annulla_crea_corso" class="waves-effect waves-light btn deep-orange darken-3" onclick="button_annulla_crea_corso_click()" style="display: none;">
                 Annulla
             </button>
-            <button type="submit" form=" corso.id " class="waves-effect waves-light btn deep-orange darken-3" onclick="">
-                Salva modifiche
-            </button>-->
 
-            <ul class="collapsible expandable popout">
+            <ul id="nuovo_corso_collapsible" class="collapsible expandable popout" style="display: none;">
                 
-                <li>
+                <li class="active">
                     <div class="collapsible-header" style="display: block;">
                         Nuovo corso
                         <div class="right">
