--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -14,7 +14,7 @@
                     <div><div class="col s4"><b>Categoria:</b></div><div class="col s8">{{ corso.categoria }}</div></div>
                     <div><div class="col s4"><b>Durata corso:</b></div><div class="col s8">{{ corso.durata }}</div></div>
                     <div><div class="col s4"><b>Periodo:</b></div><div class="col s8">{{ corso.periodo }}</div></div>
-                    <div><div class="col s4"><b>Modalità:</b></div><div class="col s8">{{ corso.modalità|prova }}</div></div>
+                    <div><div class="col s4"><b>Modalita:</b></div><div class="col s8">{{ corso.modalita|prova }}</div></div>
                     <div><div class="col s4"><b>Dipartimento:</b></div><div class="col s8">{{ corso.iddipartimento }}</div></div>
                     <div><div class="col s4"><b>Apertura iscrizioni:</b></div><div class="col s8">{{ corso.inizioiscrizioni|datetime_format_openIscrizioni }}</div></div>
                     <div><div class="col s4"><b>Chiusura iscrizioni:</b></div><div class="col s8">{{ corso.scadenzaiscrizioni|datetime_format_closeIscrizioni }}</div></div>
