--- a/app/templates/lezione_elem.html
+++ b/app/templates/lezione_elem.html
@@ -3,7 +3,7 @@
     {%- if lezione[1].idaula -%}
         
         <th>{{lezione[3].nome }} {{lezione[2].nome }} <br>
-            {%- if lezione[1].modalità == 'PR' -%}
+            {%- if lezione[1].modalita == 'D' -%}
                 <a href="#!">link zoom</a>
             {%- endif -%}
         </th>
@@ -14,7 +14,7 @@
     <th>{{ lezione[1].inizio|datetime_format }}</th>
     <th>{{ lezione[1].durata }}</th>
    
-    <th>{{ lezione[1].modalità|prova }}</th>
+    <th>{{ lezione[1].modalita|prova }}</th>
 
     <th>
     {%- if is_docente -%}
@@ -26,7 +26,7 @@
         </form>        
                             
     {%- else -%} 
-        {%- if lezione[1].modalità != 'R'-%}
+        {%- if lezione[1].modalita != 'R'-%}
             {% if lezione[1]|is_in_lezioni_prenotate(lezioni_prenotate) %}
             
                 <form action="/cancella_prenotazione" method="POST">
