--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -80,7 +80,7 @@
                             <th>Sede</th>
                             <th>Data e ora</th>
                             <th>Durata</th>
-                            <th>Modalità</th>
+                            <th>Modalita</th>
                             <th></th>
 
 
