--- a/app/templates/form_element.html
+++ b/app/templates/form_element.html
@@ -2,28 +2,33 @@
 	<div>
 	<label>{{ element.displayName }}</label>
 	</div>
+
 	<!--NON TOGLIERE class="browser-default" altrimenti succedono cose brutte
 	e le select smettono di fare il loro dovere! ho bestemmiato parecchio-->
 	<select id="{{ element.name }}" class="browser-default" name={{ class_name }}.{{ element.name }} autocomplete="off">
+	
+		
 		<option value="" disabled selected>{{ element.displayName }}</option>
-		{%- for pk, displayName in element.options.items() -%}
-			
-			<!--per le lezioni online che non si svolgono in un'aula
+
+		<!--per le lezioni online che non si svolgono in un'aula
 			se si seleziona questa opzione la chiave esterna dell'idaula
 			sarà null di default, vedi views.py: defaultValue = None-->
-			{%- if element.displayName == "aula" -%}
-				<!--non togliere l'id, serve per disabilitare l'invio dei
-				dati quando viene selezionata questa opzione-->
-				<option id="aulavirtuale"  value="virtual">aula virtuale</option>
-			{%- endif -%}
-
+		{%- if element.displayName == "aula" -%}
+		<!--non togliere l'id, serve per disabilitare l'invio dei
+			dati quando viene selezionata questa opzione-->
+			<option id="aulavirtuale"  value="virtual">aula virtuale</option>
+		{%- endif -%}
+	
+		{%- for pk, displayName in element.options.items() -%}
+		
 			<!--nel menu a tendina quando viene inserita una nuova lezione
 			vengono mostrate solo le opzioni relative ai corsi del prof
 			che sta aggiungendo le lezioni-->
 			{%- if element.displayName == "corso" -%}
 				{%- for lez_corsi in i_tuoi_corsi_lez -%}
 					{%- if lez_corsi.titolo == displayName -%}
-						<option value="{{ pk }}" {% if corso and corso[element.name] == pk -%}selected="selected"{%- endif -%}>{{ displayName }}</option>
+						<!--l'id assicura il controllo della coerenza dei dati tra modalità corso e lezioni-->
+						<option id="{{ lez_corsi.modalita }}" value="{{ pk }}" {% if corso and corso[element.name] == pk -%}selected="selected"{%- endif -%}>{{ displayName }}</option>
 					{%- endif -%}
 
 				{%- endfor -%}
