--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,6 +26,7 @@
 	<!-- icone font awesome -->
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>                      
      
+	<link rel="canonical" href="https://github.com/fawadtariq/materialize-datetimepicker" data-pjax-transient="">
 	{% block head_base %}{% endblock %}
 
 </head>
