--- a/app/templates/corsi.html
+++ b/app/templates/corsi.html
@@ -117,4 +117,6 @@
 <script src="{{ url_for('static',filename='javascript/corsi.js') }}"></script>
 <script src="{{ url_for('static',filename='javascript/corso_elem.js') }}"></script>
 
+<script src="{{ url_for('static',filename='javascript/materializedatetimepicker.js') }}"></script>
+
 {%- endblock -%}
