--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -120,6 +120,9 @@
 <script src="{{ url_for('static',filename='javascript/corsi.js') }}"></script>
 <script src="{{ url_for('static',filename='javascript/lezioni.js') }}"></script>
 
+<script src="{{ url_for('static',filename='javascript/materializedatetimepicker.js') }}"></script>
+
+
 {%- endblock -%}
 
 
