--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -85,7 +85,7 @@
 									</div>
 									<div class="row">
 										<div class="input-field col s12">
-											<input id="data_nascita" name="dataN" type="date" class="validate">
+											<input id="data_nascita" name="dataN" type="text" class="timepicker validate">
 											<label for="data_nascita">Data nascita</label>
 										</div>
 									</div>
