--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -39,6 +39,16 @@
                                         {%- for element in attrLezioni.values() -%}
                                         {%- if element.insertable -%}
                                         <div class="row">
+                                            <div class="col s0" style="padding-top: 25px;">
+                                                <!--icone-->
+                                               	<i class="small material-icons">
+                                                    {%- if element.isDatetime -%}      calendar_month
+                                                    {%- elif element.isTimedelta -%}   access_time
+                                                    {%- elif element.isMultiChoice -%} arrow_drop_down
+                                                    {%- else -%}                       text-fields
+		                                            {%- endif %} 
+                                                </i>
+                                            </div>
                                             <div class="input-field col s8">
                                                 {%- include "form_element.html" -%}
                                             </div>
